--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
           <form id="transaction-form" class="form">
             <div>
               <select id='transaction-type'>
-                <option>Deposit</option>
-                <option>Withdrawal</option>
+                <option value='deposit'>Deposit</option>
+                <option value='withdrawl'>Withdrawal</option>
               </select>
             </div>
             <div class="form-group">
