--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="main-container">
         <h1>Bank ATM</h1>
 
-        <h3>Bank Balance: <span class='bank-balance'>$750</span></h3>
+        <h3>Bank Balance: $<span class='bank-balance'>750</span></h3>
 
         <div class="form-container">
           <form id="transaction-form" class="form">
